refactor : 호스트 서비스 redisson을 사용하도록 리펙토링